  0.4.0
	- Rails 3 support
	- Rails 3 generators [Paul Rosiana] and patches by [Alexander Flatter]
10/08/2009
  0.3.14
  - Fixed the class generation when you have a custom token defined. [Brian Morearty]
10/05/2009
  0.3.13
  - Got rid of yahoo token. To support it correctly requires way too much work. Let them suffer the consequences of their decissions.
  - GoogleToken now uses portablecontacts gem
9/30/2009
  0.3.12
  - Added a simple PortableContacts adapter for GoogleToken
  - Added a SimpleClient wrapper to provide really simple wrapper for OAuth based json web services
  - Increased token size in consumer_tokens table because of Yahoo's oversized tokens 
  - Added support for Yahoo
  - Added support for Google (Boon Low)
9/26/2009
  0.3.11
  - Moved twitter tokens dependency back to regular twitter gem
7/29/2009
  0.3.10
  - Closed blocks in erb template (jcrosby) while pelle is hiding under his desk
  - Handled error case on authorize with non existent token
  - Fixed Agree2 token
  - Security Fix: Only skip verify_authenticity_token for specific oauth token requests in provider controller
7/25/2009
  0.3.9
  - Added an Index to oauth consumers controller. Rerun generator to create index template
  - Added invalidate action to provider, which allows a token to invalidate itself /oauth/invalidate
  - Added capabilities action to provider. Lets you expand to allow auto discovery of permissions and services that token provides.
  - Can override how authorize form indicates an authorization. To get around ugly checkbox
  
    def user_authorizes_token?
      params[:commit] == 'Authorize'
    end
  
7/23/2009
  0.3.8
  - Fixed Gem Plugins Loading
7/21/2009
  0.3.7
  - A blushing Pelle adds a missing file
  0.3.6
  - Twitter, Agree2 and FireEagle tokens are working in consumer.
  0.3.5
  - made it a gem
  - more thorough tests of OAuth 1.0 consumer
  - Add support for a OAUTH_10_SUPPORT constant to switch on support for OAuth 1.0 in provider
7/19/2009